topic6/sonarqube/postgres.yml


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - name: post-port1
          containerPort: 8080
        volumeMounts:
        - name: postgres-dep-volume
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-dep-volume
        persistentVolumeClaim:
          claimName: postgres-vol-pvc
---


apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: postgres
  ports:
  - name: post-svc-port1
    port: 8080
    targetPort: post-port1
