topic6/sonarqube/sonar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
spec:
  selector:
    app: sonar
  type: LoadBalancer
  ports:
  - name: sonar-svc-port1
    port: 80
    targetPort: sonar-port1
