topic6/sonarqube/sonar-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sonar.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-svc
          servicePort: sonar-svc-port1
